--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "keyboard-layout-optimizer"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+eframe = "0.27.2"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
