--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 eframe = "0.27.2"
-windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging"] }
+windows = { version = "0.56.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging"] }
